:white_check_mark: Clase N°3: Maquetación del loader.

--- a/styles/settings/_z-index.scss
+++ b/styles/settings/_z-index.scss
@@ -29,8 +29,9 @@ $z-index-2-block-group-focused: $_z-index-2;
 $z-index-2-block-group-overlay: $_z-index-2;
 
 // ? A prueba
-$z-index-3-caption: $_z-index-3;
-$z-index-3-block-insert-control: $_z-index-3;
+$z-index-3-loader: $_z-index-3;
+
+// $z-index-3-block-insert-control: $_z-index-3;
 
 // ? A prueba
 $z-index-5-figure-overlay: $_z-index-5;
