--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,23 +15,16 @@
 @import "./objects/ui-list";
 
 // Atoms
-@import "./atoms/btn";
-@import "./atoms/lead";
-@import "./atoms/encrypt-box";
-@import "./atoms/titles";
-@import "./atoms/exclamation-mark-icon";
+@import "./atoms/circle";
 
 // Molecules
-@import "./molecules/result-box";
-@import "./molecules/clarify-message";
-@import "./molecules/popup";
+
 
 // Organisms
-@import "./organisms/header";
-@import "./organisms/encrypt-zone";
+@import "./organisms/loader";
+@import "./organisms/page";
 
 // Utilities
 @import "./utilities/hidden";
 @import "./utilities/animation";
-@import "./utilities/animation-error";
 @import "./utilities/transitions";
