--- a/styles/elements/_body.scss
+++ b/styles/elements/_body.scss
@@ -7,6 +7,7 @@ body {
 	background-color: variables.$background-light-color;
 	font-family: variables.$primary-font;
 	color: variables.$text-color;
+	overflow: hidden;
 
 	@include mixins.body-lg;
 }
