--- a/styles/utilities/_animation.scss
+++ b/styles/utilities/_animation.scss
@@ -1,1 +1,28 @@
 @use "../settings/variables";
+
+@keyframes loader {
+	0% {
+		opacity: 1;
+		visibility: visible;
+	}
+
+	95% {
+		opacity: 1;
+	}
+
+	100% {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+
+@keyframes scaling {
+	0%,
+	100% {
+		transform: scale(1);
+	}
+
+	50% {
+		transform: scale(0.2);
+	}
+}
