:white_check_mark: Clase N°4: Layout con CSS Grid.

--- a/styles/atoms/_circle.scss
+++ b/styles/atoms/_circle.scss
@@ -6,4 +6,8 @@
 	height: variables.$space-10;
 	border-radius: variables.$border-radius-circle;
 	background-color: lightpink;
+
+	// &--yellow {
+	// 	background-color: lightpink;
+	// }
 }
