--- a/styles/elements/_body.scss
+++ b/styles/elements/_body.scss
@@ -4,7 +4,7 @@
 body {
 	// padding-block: variables.$space-6 variables.$space-10;
 	// padding-inline: variables.$space-4;
-	background-color: variables.$background-light-color;
+	// background-color: variables.$background-light-color;
 	font-family: variables.$primary-font;
 	color: variables.$text-color;
 	overflow: hidden;
