:white_check_mark: Clase N°5: Navbar.

--- a/styles/settings/_typography.scss
+++ b/styles/settings/_typography.scss
@@ -9,14 +9,14 @@ $weight-bold: 700;
 // Font Family
 @font-face {
 	font-family: Lato;
-	src: url("../assets/font-family/Lato/Lato-Thin.ttf") format("truetype");
+	src: url("./assets/font-family/Lato/Lato-Thin.ttf") format("truetype");
 	font-weight: $weight-thin;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: Lato;
-	src: url("../assets/font-family/Lato/Lato-Light.ttf") format("truetype");
+	src: url("./assets/font-family/Lato/Lato-Light.ttf") format("truetype");
 	font-weight: $weight-light;
 	font-style: normal;
 }
