:white_check_mark: Clase N°6: Contenido principal.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,6 +24,7 @@
 @import "./organisms/header";
 @import "./organisms/loader";
 @import "./organisms/page";
+@import "./organisms/main-content";
 
 // Utilities
 @import "./utilities/hidden";
