--- a/styles/organisms/_header.scss
+++ b/styles/organisms/_header.scss
@@ -1,8 +1,8 @@
 @use "../settings/variables";
 
 .g-header {
+	display: flex;
 	grid-area: header;
-	background-color: lightpink;
 	color: red;
 	animation: header 2s 500ms ease-in-out;
 
@@ -24,7 +24,7 @@
 	}
 
 	&__link {
-		font-weight: variables.$weight-thin;
+		font-weight: variables.$weight-light;
 		color: variables.$text-red-color;
 	}
 }
