--- a/styles/settings/_layout.scss
+++ b/styles/settings/_layout.scss
@@ -16,8 +16,10 @@ $space-3: 1.2rem;
 $space-4: 1.6rem;
 $space-5: 2rem;
 $space-6: 2.4rem;
+$space-7: 2.8rem;
 $space-8: 3.2rem;
 $space-10: 4rem;
+$space-11: 4.4rem;
 $space-12: 4.8rem;
 $space-16: 6.4rem;
 $space-20: 8rem;
