--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -1,12 +1,12 @@
 /* stylelint-disable no-invalid-position-at-import-rule */
 @media screen and (width >= 1024px) {
 	// Atoms
-	@import "./atoms/encrypt-box--desktop";
+	@import './atoms/encrypt-box--desktop';
 
 	// Molecules
-	@import "./molecules/result-box--desktop";
+	@import './molecules/result-box--desktop';
 
 	// Organisms
-	@import "./organisms/main-content";
-	@import "./organisms/encrypt-zone--desktop";
+	@import './organisms/main-content';
+	@import './organisms/encrypt-zone--desktop';
 }
