--- a/styles/guide.scss
+++ b/styles/guide.scss
@@ -1,27 +1,27 @@
 // Generic
-@import "./generic/normalize";
-@import "./generic/light-reset";
-@import "./generic/box-sizing";
+@import './generic/normalize';
+@import './generic/light-reset';
+@import './generic/box-sizing';
 
 // Elements
-@import "./elements/body";
-@import "./elements/headings";
-@import "./elements/img";
-@import "./elements/html";
-@import "./elements/links";
+@import './elements/body';
+@import './elements/headings';
+@import './elements/img';
+@import './elements/html';
+@import './elements/links';
 
 // Objects
-@import "./objects/container";
-@import "./objects/ui-list";
+@import './objects/container';
+@import './objects/ui-list';
 
 // Atoms
-@import "./atoms/btn";
-@import "./atoms/lead";
-@import "./atoms/encrypt-box";
-@import "./atoms/titles";
+@import './atoms/btn';
+@import './atoms/lead';
+@import './atoms/encrypt-box';
+@import './atoms/titles';
 
 // Molecules
-@import "./molecules/result-box";
+@import './molecules/result-box';
 
 body {
 	padding: 2rem;
