--- a/styles/organisms/_loader.scss
+++ b/styles/organisms/_loader.scss
@@ -1,4 +1,4 @@
-@use "../settings/variables";
+@use '../settings/variables';
 
 .g-loader {
 	position: absolute;
@@ -30,4 +30,3 @@
 		animation-delay: 400ms;
 	}
 }
-
