--- a/styles/organisms/_page.scss
+++ b/styles/organisms/_page.scss
@@ -4,9 +4,9 @@
 	grid-template-columns: 55% 45%;
 	grid-template-rows: 20% 50% 30%;
 	grid-template-areas:
-		"header aside"
-		"main aside"
-		"footer aside";
+		'header aside'
+		'main aside'
+		'footer aside';
 	width: 100%;
 	height: 100vh;
 }
