--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -1,4 +1,4 @@
-@forward "./colors";
-@forward "./layout";
-@forward "./typography";
-@forward "./z-index";
+@forward './colors';
+@forward './layout';
+@forward './typography';
+@forward './z-index';
