--- a/styles/tablet.scss
+++ b/styles/tablet.scss
@@ -1,6 +1,5 @@
 /* stylelint-disable no-invalid-position-at-import-rule */
 @media screen and (width >= 768px) {
 	// Organisms
-	@import "./organisms/encrypt-zone--tablet";
+	@import './organisms/encrypt-zone--tablet';
 }
-
