:white_check_mark: Clase N°8: Footer.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,6 +25,7 @@
 @import './organisms/page';
 @import './organisms/main-content';
 @import './organisms/side-content';
+@import './organisms/footer';
 
 // Utilities
 @import './utilities/hidden';
