--- a/styles/settings/_layout.scss
+++ b/styles/settings/_layout.scss
@@ -35,4 +35,5 @@ $border-radius-3: 1.2rem;
 $border-radius-4: 1.6rem;
 $border-radius-5: 2rem;
 $border-radius-6: 2.4rem;
+$border-radius-20: 8rem;
 $border-radius-circle: 50%;
