--- a/styles/utilities/_animation.scss
+++ b/styles/utilities/_animation.scss
@@ -66,3 +66,13 @@
 		transform: translateX(0);
 	}
 }
+
+@keyframes footer {
+	0% {
+		transform: translateY(100%);
+	}
+
+	100% {
+		transform: translateY(0);
+	}
+}
