:white_check_mark: Clase N°9: Cómo acceder al DOM con JavaScript.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -26,6 +26,7 @@
 @import './organisms/main-content';
 @import './organisms/side-content';
 @import './organisms/footer';
+@import './organisms/modal';
 
 // Utilities
 @import './utilities/hidden';
