:white_check_mark: Clase N°10: Modal: evento click con JavaScript.

--- a/styles/organisms/_modal.scss
+++ b/styles/organisms/_modal.scss
@@ -5,7 +5,15 @@ $pure-black: variables.$pure-black;
 .g-modal {
 	position: absolute;
 	z-index: variables.$z-index-1-block-group;
+	display: grid;
+	place-items: center;
 	width: 100%;
 	height: 100%;
 	background: rgba($pure-black, 50%);
+
+	&__content {
+		width: 50%;
+		height: 50%;
+		background-color: variables.$background-lightest-color;
+	}
 }
