--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -31,6 +31,7 @@ $pure-white: $_white;
 // Background
 $background-yellow-color: $yellow;
 $background-blue-color: $blue;
+$background-lightest-color: $pure-white;
 
 // Text
 $text-color: $pure-black;
