:white_check_mark: Clase N°11: Slider.

--- a/styles/atoms/_circle.scss
+++ b/styles/atoms/_circle.scss
@@ -4,9 +4,8 @@
 	width: variables.$space-10;
 	height: variables.$space-10;
 	border-radius: variables.$border-radius-circle;
-	background-color: lightpink;
 
-	// &--yellow {
-	// 	background-color: lightpink;
-	// }
+	&--yellow {
+		background-color: variables.$background-yellow-color;
+	}
 }
