--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -35,4 +35,5 @@ $background-lightest-color: $pure-white;
 
 // Text
 $text-color: $pure-black;
+$text-light-color: $pure-white;
 $text-red-color: $red;
