--- a/styles/organisms/_side-content.scss
+++ b/styles/organisms/_side-content.scss
@@ -11,7 +11,7 @@
 		grid-column: 1 / 2;
 		justify-self: center;
 		font-weight: variables.$weight-light;
-		writing-mode: sideways-lr;
+		writing-mode: tb;
 		opacity: 0;
 		animation-name: side-content-title;
 		animation-duration: 500ms;
@@ -23,7 +23,7 @@
 	&__img {
 		grid-row: 1 / 2;
 		grid-column: 2 / 6;
-		transform: translateX(60rem);
+		transform: translateX(100vw);
 		animation: side-content-img 500ms ease-in-out 2.5s forwards;
 	}
 
