--- a/styles/settings/_z-index.scss
+++ b/styles/settings/_z-index.scss
@@ -1,5 +1,6 @@
 // Z-Index Scale (private vars)
 // -------------------------
+$_z-index-0: 0;
 $_z-index-1: 1;
 $_z-index-2: 2;
 $_z-index-3: 3;
@@ -10,6 +11,7 @@ $_z-index-7: 7;
 $_z-index-8: 8;
 $_z-index-9: 9;
 $_z-index-10: 10;
+$z-index-initial: $_z-index-0;
 
 // Z-Index Applications
 // -------------------------
